# slack-project

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
slack_project/: collector.py  config.py  config_loader.py  ghdag_bridge.py  transcript.py  workspace.py
slack_project/briefing/: __init__.py  updater.py  weekly.py
slack_project/cli/: fetch_logs.py  post_docs.py  sync_todo.py
slack_project/docs/: __init__.py  formatter.py  parser.py  to_todo.py
slack_project/slack/: __init__.py  client.py  fetch.py  lists.py
slack_project/todo/: __init__.py  parser.py  sync.py
tests/: test_briefing_updater.py  test_briefing_weekly.py  test_cli_fetch_logs.py  test_cli_post_docs.py  test_cli_sync_todo.py  test_collector.py  test_config.py  test_docs_formatter.py  test_docs_parser.py  test_docs_to_todo.py  test_ghdag_bridge.py  test_slack_client.py  test_slack_fetch.py  test_slack_lists.py  test_todo_parser.py  test_todo_sync.py  test_transcript.py  test_workspace.py
